<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SignUpActivity"
    android:background="@color/main_background_blue">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="55dp"
            android:layout_height="47dp"
            android:layout_marginEnd="15dp"
            app:srcCompat="@drawable/sepetim_logo" />

        <TextView
            android:id="@+id/sepetim_main_activity2"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:fontFamily="@font/righteous"
            android:text="@string/main_app_name_uppercase"
            android:textAlignment="center"
            android:textColor="@color/main_name_color"
            android:textSize="35sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <EditText
            android:id="@+id/sign_up_email_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/e_mail_text"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_text_color"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/signup_password_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/password_text"
            android:inputType="textWebPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_text_color"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/signup_password_again_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/password_again_text"
            android:inputType="textWebPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_text_color"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_button_white"
            android:text="@string/sign_up_uppercase"
            android:textColor="@color/main_background_blue"

            />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>